// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TwoFactorAuthModal render should render with secret and QR code 1`] = `
<v-modal-stub
  class="is-dark two-factor-auth-modal"
>
  <template>
    
    Two Factor Authentication
  
  </template>
   
  <verification-code-form-stub
    email="email"
  />
</v-modal-stub>
`;

exports[`TwoFactorAuthModal render should render without secret and QR code 1`] = `
<v-modal-stub
  class="is-dark two-factor-auth-modal"
>
  <template>
    
    Two Factor Authentication
  
  </template>
   
  <verification-code-form-stub />
</v-modal-stub>
`;

exports[`TwoFactorAuthModal render should render without secret and QR code 2`] = `
<v-modal-stub
  class="is-dark two-factor-auth-modal"
>
  <template>
    
    Two Factor Authentication
  
  </template>
   
  <two-factor-auth-form-stub
    email="email"
  />
</v-modal-stub>
`;
